--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -19,8 +19,15 @@ jobs:
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
-    - run: npm ci
-    - run: npm run build
+    - name: Install dependences
+      run:
+        if [ -e yarn.lock ]; then
+        yarn install --frozen-lockfile
+        elif [ -e package-lock.json ]; then
+        npm ci
+        else
+        npm i
+        fi
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
